--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -1,72 +1,68 @@
-<div class="subpageTitle u-bg10">
-  <div class="container">
-     <h1 class="text-uppercase">
-        Contact Us
-     </h1>
-  </div>
-</div>
-<!-- subpageBanner -->
-<div class="container">
-  <div class="row">
-     <div class="col-sm-8 col-sm-push-4 col-md-7 col-md-push-5 col-lg-8 col-lg-push-4" id="mainContent">
-        <ul class="breadcrumb">
-           <li>
-              <a id="bchomelink" class="fileTrail" href="/"><i class="fa fa-home" aria-hidden="true"></i></a>
-           </li>
-           <li class="fileTrailCurrent active">Contact Us</li>
-        </ul>
-        <form name="contentForm" enctype="multipart/form-data" method="post" action="/contact-us/index.stml">
-           <!-- <h4>CONTACT FORM</h4> -->
-           <div class="contactForm">
-              <div class="row">
-                 <div class="col-md-6">
-                    <div class="form-group icon-1">
-                       <label class="control-label sr-only" for="firstName">First Name</label> 
-                       <input name="firstName" id="firstName" class="form-control" placeholder="FIRST NAME" type="text" value="">
-                    </div>
-                    <div class="form-group icon-1">
-                       <label class="control-label sr-only" for="c_lastname">Last Name</label> 
-                       <input name="lastname" id="c_lastname" class="form-control" placeholder="LAST NAME" type="text" value="">
-                    </div>
-                    <div class="form-group icon-2">
-                       <label class="control-label sr-only" for="fromEmail">Email</label> 
-                       <input name="fromEmail" id="fromEmail" class="form-control" placeholder="EMAIL" type="text" value="">
-                    </div>
-                    <div class="form-group icon-3">
-                       <label class="control-label sr-only" for="phoneNumber">Phone Number</label> 
-                       <input name="phoneNumber" id="phoneNumber" class="form-control" placeholder="PHONE" type="text" value="">
-                    </div>
-                 </div>
-                 <div class="col-md-6">
-                    <div class="form-group">
-                       <label class="control-label sr-only" for="comments">Your Message</label> 
-                       <textarea name="comments" rows="5" id="comments" class="form-control" placeholder="YOUR MESSAGE" cols="10"></textarea>
-                    </div>
-                    <input type="submit" value="SUBMIT" class="btn btn-primary btn-block">
-                 </div>
+<section class="text-center">
+
+
+    <h3 class="mb-5">Contact us</h3>
+  
+    <div class="row">
+      <div class="col-lg-5">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12094.57348593182!2d-74.00599512526003!3d40.72586666928451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2598f988156a9%3A0xd54629bdf9d61d68!2sBroadway-Lafayette%20St!5e0!3m2!1spl!2spl!4v1624523797308!5m2!1spl!2spl"
+          class="h-100 w-100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+  
+      <div class="col-lg-7">
+        <form>
+          <div class="row">
+            <div class="col-md-9">
+              <div class="row mb-4">
+                <div class="col-md-6 mb-4 mb-md-0">
+                  <div data-mdb-input-init class="form-outline">
+                    <input type="text" id="form3Example1" class="form-control" />
+                    <label class="form-label" for="form3Example1">First name</label>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div data-mdb-input-init class="form-outline">
+                    <input type="email" id="form3Example2" class="form-control" />
+                    <label class="form-label" for="form3Example2">Email Address</label>
+                  </div>
+                </div>
               </div>
-              <!-- / row -->
-           </div>
-           <!-- / contactForm -->
+              <div data-mdb-input-init class="form-outline mb-4">
+                <input type="text" id="form3Example3" class="form-control" />
+                <label class="form-label" for="form3Example3">Subject</label>
+              </div>
+              <div data-mdb-input-init class="form-outline mb-4">
+                <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                <label class="form-label" for="form4Example3">Message</label>
+              </div>
+              <div class="text-center text-md-start">
+                <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary mb-5 mb-md-0">
+                  Send
+                </button>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <ul class="list-unstyled">
+                <li>
+                  <i class="fas fa-map-marker-alt fa-2x text-primary"></i>
+                  <p><small>New York, NY 10012, USA</small></p>
+                </li>
+                <li>
+                  <i class="fas fa-phone fa-2x text-primary"></i>
+                  <p><small>+ 01 234 567 89</small></p>
+                </li>
+                <li>
+                  <i class="fas fa-envelope fa-2x text-primary"></i>
+                  <p><small>contact@gmail.com</small></p>
+                </li>
+              </ul>
+            </div>
+          </div>
         </form>
-     </div>
-     <!-- / #mainContent -->
-     <div class="col-sm-4 col-sm-pull-8 col-md-5 col-md-pull-7 col-lg-4 col-lg-pull-8 pageSidebar" id="leftSideNav">
-        <ul class="sidebar-widget list-group u-paddingTop30 text-uppercase">
-           <li class="list-group-item">
-              <a href="/" data-module-object-id="2" data-id="12379" data-layout="basic" data-levels="1">About Us</a>
-           </li>
-           <li class="navHighlight list-group-item">
-              <a href="/" data-module-object-id="2" data-id="12379" data-layout="basic" data-levels="1" style="color: white;">Contact Us</a>
-           </li>
-           <li class="list-group-item">
-              <a href="/" data-module-object-id="2" data-id="12385" data-layout="basic" data-levels="1">Phone Directory</a>
-           </li>
-        </ul>
-     </div>
-     <!-- / #leftSideNav -->
-  </div>
-  <!-- / row -->
-</div>
-<!-- / container -->
-</div>
+  
+      </div>
+    </div>
+  
+  
+  </section>
