--- a/templates/map.html
+++ b/templates/map.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Interactive Location Marker with ArcGIS</title>
+    <title>Location Marker</title>
 
     <!-- ArcGIS CSS -->
     <link rel="stylesheet" href="https://js.arcgis.com/4.27/esri/themes/light/main.css" />
@@ -58,7 +58,7 @@
         background-color: #f44336;
       }
       #map {
-        height: 550px;
+        height: 700px;
         width: 1700px;
         max-width: 100%;
         border: 1px solid #ccc;
