--- a/templates/map.html
+++ b/templates/map.html
@@ -59,14 +59,14 @@
       }
       #map {
         height: 700px;
-        width: 1700px;
+        width: 1900px;
         max-width: 100%;
         border: 1px solid #ccc;
       }
     </style>
   </head>
   <body>
-    <h1>Interactive Location Marker with ArcGIS</h1>
+    <h1>Interactive Location Finder</h1>
 
     <!-- Dropdown Menu for Basemap Selection -->
     <div id="menu-bar">
