--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                             Services
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Service_1</a></li>
+                            <li><a class="dropdown-item" href="map/">Map</a></li>
                             <li><a class="dropdown-item" href="#">Service_2</a></li>
                             <li>
                                 <hr class="dropdown-divider">
