--- a/templates/goamap.html
+++ b/templates/goamap.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GOA Location Marker</title>
+    <title>GOA Location Marker with Weather and AQI</title>
 
     <!-- ArcGIS CSS -->
     <link rel="stylesheet" href="https://js.arcgis.com/4.27/esri/themes/light/main.css" />
@@ -66,7 +66,7 @@
     </style>
   </head>
   <body>
-    <h1>Interactive Location Finder</h1>
+    <h1>Interactive Goa Location Finder with Weather & AQI</h1>
 
     <!-- Dropdown Menu for Basemap Selection -->
     <div id="menu-bar">
@@ -87,7 +87,7 @@
       <input type="text" id="longitude" placeholder="Enter longitude" />
 
       <button onclick="addMarker()">Add Marker</button>
-      <button id="clear-button" onclick="clearMarkers()">Clear All Markers</button>
+      <button id="clear-button" onclick="clearUserMarkers()">Clear All Markers</button>
     </div>
 
     <div id="map"></div>
@@ -97,6 +97,6 @@
 
     <!-- Link to external JavaScript file -->
     {% load static %}
-    <script src="{% static 'js/map.js' %}"></script>
+    <script src="{% static 'js/goamap.js' %}"></script>
   </body>
 </html>
