--- a/templates/goamap.html
+++ b/templates/goamap.html
@@ -86,7 +86,7 @@
       <label for="longitude">Longitude:</label>
       <input type="text" id="longitude" placeholder="Enter longitude" />
 
-      <button onclick="addMarker()">Add Marker</button>
+      <button onclick="window.addMarker()">Add Marker</button>
       <button id="clear-button" onclick="clearUserMarkers()">Clear All Markers</button>
     </div>
 
