--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="map/">Map</a></li>
-                            <li><a class="dropdown-item" href="#">Service_2</a></li>
+                            <li><a class="dropdown-item" href="goamap/">Goa Map</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
