--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                             Services
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="map/">Map</a></li>
+                            <li><a class="dropdown-item" href="route_map/">Map</a></li>
                             <li><a class="dropdown-item" href="goamap/">GOA Map</a></li>
 
                             <li>
